# knowledge-weaver

./: .env.example  .gitignore  PROJECT_OVERVIEW.md  README.md  SUBMISSION_CHECKLIST.md  TESTING_GUIDE.md  TESTING_REPORT.md  main.py  pyproject.toml  quick_test.py  requirements.txt  test_agents.py
configs/: config.yaml
data/datasets/: test.json  train.json  val.json
demo_output/: graph.json  metrics.json  schema.json
models/lora/extractor_v1/checkpoint-20/: adapter_model.safetensors  trainer_state.json
models/lora/extractor_v1/final/: adapter_config.json
scripts/: build_dataset_from_content.py  demo_end_to_end.py  prepare_dataset.py  process_pdfs.py  process_youtube.py  test_extractor.py  test_ingestion.py  train_lora.py  watch_directory.py
src/: utils.py
src/agents/: extractor.py  linker.py  planner.py  reasoner.py
src/api/: server.py
src/evaluation/: evaluator.py
src/graph/: graph_store.py  schema_manager.py
src/ingestion/: base_processor.py  docx_processor.py  image_processor.py  markdown_processor.py  pdf_processor.py  pipeline.py  video_processor.py
src/models/: dataset_builder.py  train_lora.py
src/rag/: retrieval.py
src/ui/: app.py
